# prev_prob_fogo_ingestao_sync

./: .gitignore  pyproject.toml
prev_prob_fogo_ingestao/: app.py
prev_prob_fogo_ingestao/ingestao/: acess_data.py  acessar_banco copy.py  acessar_banco.py  acessar_banco_neon.py  connect_aiven.py  criar_mapa_ArquivoOnline.py  criar_mapa_ArquivoOnline_aiven.py  ingestao_bioma_pantanal_aiven.py  ingestao_bioma_pantanal_neon.py  ingestao_dados_climatico_csv.py  ingestao_dados_climatico_shp_aiven.py  ingestao_dados_climatico_shp_neon.py  refatorando_ingestao_dados_climatico_shp_neon.py  retorno_sql.py  schemas.py  settings.py
tests/: test_acessar_banco.py  test_app.py  test_processar_dados.py
