[tool.poetry]
name = "prev-prob-fogo-ingestao"
version = "0.1.0"
description = ""
authors = ["wanhenri <slipkorn.jk@gmail.com>"]
readme = "README.md"
packages = [{include = "prev_prob_fogo_ingestao"}]

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.116.1"}
geopandas = "^1.1.1"
matplotlib = "^3.10.3"
sqlalchemy = "^2.0.42"
geoalchemy2 = "^0.18.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'
testpaths = ["tests"]

[tool.taskipy.tasks]
run = 'fastapi dev prev_prob_fogo_ingestao/app.py'

pre_test = 'task lint'
test = 'pytest --cov=prev_prob_fogo_ingestao -vv'
post_test = 'coverage html'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
